# mpl-layout

./: .gitignore  LICENCE  README.md  prototype.py  pyproject.toml
examples/: README_example.ipynb  collinearity.py  complete_axes.py  contour_colorbar.ipynb  grid_axes.ipynb  grid_axes.py  one_axes.ipynb  one_axes.py  profile_solver.py  single_axes.py  ten_simple_rules_demo.ipynb  tutorial.ipynb  two_axes.ipynb  two_axes.py
mpllayout/: array.py  constraint.py  constraints.py  containers.py  geometry.py  layout.py  matplotlibutils.py  primitive.py  primitives.py  solver.py  ui.py
src/mpllayout/: constraints.py  constructions.py  containers.py  layout.py  matplotlibutils.py  primitives.py  solver.py  ui.py
tests/: fixture_primitives.py  test_constraints.py  test_constructions.py  test_containers.py  test_geometry.py  test_layout.py  test_primitives.py  test_solve.py
