[build-system]
requires = ["setuptools>=61.0", "jax", "numpy", "matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-layout"
version = "0.1.0"
authors = [
  { name="Jonathan Deng", email="jonathan.j.deng@gmail.com" },
]
description = "A package for laying out figures with geometric constraints"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jon-deng/mpl-layout"
"Bug Tracker" = "https://github.com/jon-deng/mpl-layout/issues"
