[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-layout"
version = "0.1.0"
dependencies = [
  "jax",
  "numpy",
  "matplotlib"
]
requires-python = ">=3.7"
authors = [
  { name="Jonathan Deng", email="jonathan.j.deng@gmail.com" },
]
description = "A package for laying out figures with geometric constraints"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["plotting", "matplotlib", "geometric constraints", "layouts"]

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/jon-deng/mpl-layout"
"Bug Tracker" = "https://github.com/jon-deng/mpl-layout/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
